--- a/views/write_board.html
+++ b/views/write_board.html
@@ -152,7 +152,7 @@
           .then(data => {
             console.log('응답 데이터:', data);
             if (data.success) {
-              alert('매치 글 작성이 완료되었습니다.');
+              alert('게시글 작성이 완료되었습니다.');
               window.location.href = '/community';
             }
           })
