--- a/views/write_qna.html
+++ b/views/write_qna.html
@@ -10,18 +10,18 @@
     <title>PangPang</title>
     <script>      
       fetch('/navbar')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("content").innerHTML = data;
-                // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
-                const token = sessionStorage.getItem('토큰');
-                if (token) {
-                    document.getElementById("logoutButton").style.display = "block";
-                } else {
-                    document.getElementById("logoutButton").style.display = "none";
-                }
-            })
-            .catch(error => console.error('Error:', error));
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("content").innerHTML = data;
+        // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
+        const token = sessionStorage.getItem('토큰');
+        if (token) {
+            document.getElementById("logoutButton").style.display = "block";
+        } else {
+            document.getElementById("logoutButton").style.display = "none";
+        }
+      })
+      .catch(error => console.error('Error:', error));
     </script>
   </head>
   <body>
@@ -33,14 +33,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-           
             <i class="bi bi-house-fill"> > 도움말 > Q&A</i>
           </div> 
         </div>
       </div>
     </main>
     
-
     <!--사이드바 -->
     <div id="page-wrapper">
       <div id="sidebar-wrapper">
@@ -59,23 +57,21 @@
       <div class="container">
         <div class="header">
           <h2 class="text-center mt-5 fw-bold ">Q&A 글 작성</h2>
+          <p>Q&A는 수정, 삭제가 불가능합니다.</p>
         </div>
         
         <br/>
         <br/>
         <div class="write" style="margin: 0 250px;">
-          <form action="/question/write" method="post">
-                  
+          <form action="/question/write" method="post">     
             <input type="text" id="title" name="title" placeholder="제목" required>
-            
             <textarea id="description" name="description" rows="4" placeholder="내용" required></textarea>
           
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <button value='findsportmate' type="submit">글 작성</button>
               <button type="reset">취소</button> 
             </div>
-            
-        </form>
+          </form>
         </div> 
       </div>
       <br/>
@@ -83,67 +79,60 @@
       <br/>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-                checkAuthentication(); // 페이지 로드 시 토큰 확인
-        });
-    
-        // 사용자의 인증 여부를 확인하는 함수
-        function checkAuthentication() {
-          const token = sessionStorage.getItem('토큰');
-    
-          if (!token) {
-            // 토큰이 없으면 로그인 화면으로 리다이렉트
-            alert('로그인이 필요합니다.');
-            window.location.href = '/users/login'; // 로그인 화면으로 리다이렉트
-          }
-        }
-    
-        document.querySelector('button[value="findsportmate"]').addEventListener('click', function(event) {
-          event.preventDefault(); // 기본 동작 방지
-    
-          
-    
-          
-            const title = document.getElementById('title').value;
-            const description = document.getElementById('description').value;
-    
-            const token = sessionStorage.getItem('토큰'); 
-    
-            fetch('/question/write', {
-              method: 'POST',
-              headers: {
-                'authorization': `${token}`,
-                'Content-Type': 'application/json',
-              },
-              body: JSON.stringify({ title, description })
-            })
-            .then(response => { 
-              console.log('서버 응답:', response);
-              return response.json(); })
-            .then(data => {
-              console.log('응답 데이터:', data);
-              if (data.success) {
-                alert('Q&A 작성이 완료되었습니다.');
-                window.location.href = '/question';
-              }
-            })
-            .catch(error => {
-              console.error('에러가 발생했습니다.:', error);
-            });        
-          
-        });
-        //사이드바 높이 동적으로 조절
-      function setSidebarHeight() {
-            const sidebar = document.getElementById('sidebar-wrapper');
-            const windowHeight = window.innerHeight;
-            const newHeight = windowHeight + 120; // 현재 창 높이에 500px 추가
-            sidebar.style.height = newHeight + 'px';
-          }
+      document.addEventListener('DOMContentLoaded', function() {
+        checkAuthentication(); // 페이지 로드 시 토큰 확인
+      });
   
-          window.addEventListener('DOMContentLoaded', setSidebarHeight);
-          window.addEventListener('resize', setSidebarHeight);
-        
-      </script>
+      // 사용자의 인증 여부를 확인하는 함수
+      function checkAuthentication() {
+        const token = sessionStorage.getItem('토큰');
+  
+        if (!token) {
+          // 토큰이 없으면 로그인 화면으로 리다이렉트
+          alert('로그인이 필요합니다.');
+          window.location.href = '/users/login'; // 로그인 화면으로 리다이렉트
+        }
+      }
     
-    </body>
-  </html>
+      document.querySelector('button[value="findsportmate"]').addEventListener('click', function(event) {
+        event.preventDefault(); // 기본 동작 방지
+  
+        const title = document.getElementById('title').value;
+        const description = document.getElementById('description').value;
+
+        const token = sessionStorage.getItem('토큰'); 
+
+        fetch('/question/write', {
+          method: 'POST',
+          headers: {
+            'authorization': `${token}`,
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ title, description })
+        })
+        .then(response => { return response.json(); })
+        .then(data => {
+          if (data.success) {
+            alert('Q&A 작성이 완료되었습니다.');
+            window.location.href = '/question';
+          }
+        })
+        .catch(error => {
+          console.error('에러가 발생했습니다.:', error);
+        });        
+
+      });
+
+      //사이드바 높이 동적으로 조절
+      function setSidebarHeight() {
+        const sidebar = document.getElementById('sidebar-wrapper');
+        const windowHeight = window.innerHeight;
+        const newHeight = windowHeight + 120; // 현재 창 높이에 500px 추가
+        sidebar.style.height = newHeight + 'px';
+      }
+
+      window.addEventListener('DOMContentLoaded', setSidebarHeight);
+      window.addEventListener('resize', setSidebarHeight);
+    </script>
+  </body>
+</html>
