--- a/views/read_match.html
+++ b/views/read_match.html
@@ -10,19 +10,20 @@
     <title>PangPang</title>
     <script>      
       fetch('/navbar')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("content").innerHTML = data;
-                // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
-                const token = sessionStorage.getItem('토큰');
-                if (token) {
-                    document.getElementById("logoutButton").style.display = "block";
-                } else {
-                    document.getElementById("logoutButton").style.display = "none";
-                }
-            })
-            .catch(error => console.error('Error:', error));
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("content").innerHTML = data;
+        // navbar.html이 로딩된 후에 버튼 상태를 확인하고 로그인/로그아웃 버튼을 제어하는 스크립트를 추가합니다.
+        const token = sessionStorage.getItem('토큰');
+        if (token) {
+            document.getElementById("logoutButton").style.display = "block";
+        } else {
+            document.getElementById("logoutButton").style.display = "none";
+        }
+      })
+      .catch(error => console.error('Error:', error));
     </script>
+    
     <style>
       /* 셀에 선을 추가하고 간격을 조정합니다. */
       td {
@@ -32,11 +33,11 @@
     
       /* 제목 셀의 스타일 */
       th {
-        
         font-weight: bold; /* 텍스트를 굵게 설정 */
         text-align: center; /* 텍스트 가운데 정렬 */
       }
     </style>
+
   </head>
 
   <body>
@@ -72,94 +73,89 @@
       
     <!--매치글 조회-->
     <div class="container" style="margin: 0 auto; width: 65%;">
-      
       <div class="row">
         <div class="col">
-            <table class="table table-condensed">
-              
-                    <span style='float:right'>
-                        <a href="/match" class="btn btn-success">목록</a>
-                        <a id="editButton" class="btn btn-success">수정</a>
-                        <a id="deleteButton" class="btn btn-success" onclick="deleteMatch()">삭제</a>
-                        <a href="/match/write" class="btn btn-success">글쓰기</a>
-                    </span>
-            </table>
-            <hr style="border: solid #006f3e;"/>
+          <table class="table table-condensed">
+            <span style='float:right'>
+              <a href="/match" class="btn btn-success">목록</a>
+              <a id="editButton" class="btn btn-success">수정</a>
+              <a id="deleteButton" class="btn btn-success" onclick="deleteMatch()">삭제</a>
+              <a href="/match/write" class="btn btn-success">글쓰기</a>
+            </span>
+          </table>
+          <hr style="border: solid #006f3e;"/>
         </div>
       </div>
       <table class="table table-condensed" >
-          <thead>
-            <tr>
-              <th>제목</th>
-              <td>{{match.title}}</td>
-            </tr>
-          </thead>
-          <tbody>
-            
-            <tr>
-              <th>작성자</th>
-              <td>{{match.writer}}</td>
-            </tr>
-            <tr>
-              <th>종목</th>
-              <td>{{match.sport}}</td>
-            </tr>
-            <tr>
-              <th>매치날짜</th>
-              <td>{{match.matchDate}}</td>
-            </tr>
-            <tr>
-              <th>장소</th>
-              <td>{{match.location}}</td>
-            </tr>
-            <tr>
-              <th>모집인원</th>
-              <td>{{match.people}}</td>
-            </tr>
-            <tr>
-              <th>참가비</th>
-              <td>{{match.price}}</td>
-            </tr>
-            <tr>
-              <th>성별</th>
-              <td >{{match.gender}}</td>
-            </tr>
-            <tr>
-              <th>내용</th>
-              <td style="height: 200px; overflow: auto;">{{match.content}}</td>
-            </tr>
-            <tr>
-              <th>작성일</th>
-              <td>{{match.createdAt}}</td>
-            </tr>
-            
-          </tbody>
-        </table>
-        <hr style="border: solid #006f3e;"/>
-        <br/>
+        <thead>
+          <tr>
+            <th>제목</th>
+            <td>{{match.title}}</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>작성자</th>
+            <td id="writer">{{match.writer}}</td>
+          </tr>
+          <tr>
+            <th>종목</th>
+            <td>{{match.sport}}</td>
+          </tr>
+          <tr>
+            <th>매치날짜</th>
+            <td>{{match.matchDate}}</td>
+          </tr>
+          <tr>
+            <th>장소</th>
+            <td>{{match.location}}</td>
+          </tr>
+          <tr>
+            <th>모집인원</th>
+            <td>{{match.people}}</td>
+          </tr>
+          <tr>
+            <th>참가비</th>
+            <td>{{match.price}}</td>
+          </tr>
+          <tr>
+            <th>성별</th>
+            <td >{{match.gender}}</td>
+          </tr>
+          <tr>
+            <th>내용</th>
+            <td style="height: 200px; overflow: auto;">{{match.content}}</td>
+          </tr>
+          <tr>
+            <th>작성일</th>
+            <td>{{match.createdAt}}</td>
+          </tr>
+        </tbody>
+      </table>
+      <hr style="border: solid #006f3e;"/>
+      <br/>
         
-        <div id="form-commentInfo" style="text-align: center;">
-          <input id="comment-input" placeholder="댓글을 입력해 주세요.">
-          <button id="commentSubmit" class="btn btn-success">등록</button>
-          <br/>
-        </div>
+      <div id="form-commentInfo" style="text-align: center;">
+        <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+        <button id="commentSubmit" class="btn btn-success">등록</button>
         <br/>
-        <br/>
-        <br/>
-        <div id="comment-count" style="width:100%">댓글 <span id="count"></span></div>
-        
-        
-        <table class="table" style="text-align: center;">
-          <thead>
-            <hr>
-            <tr>
-              <th scope="col">댓글 내용</th>
-              <th scope="col">작성자</th>
-            </tr>
-          </thead>
-          <tbody id="showcomment"></tbody>
-        </table>
-        <hr/>
+      </div>
+      <br/>
+      <br/>
+      <br/>
+      <div id="comment-count" style="width:100%">댓글 <span id="count"></span></div>
+      
+      <table class="table" style="text-align: center;">
+        <thead>
+          <hr>
+          <tr>
+            <th scope="col">댓글 내용</th>
+            <th scope="col">작성자</th>
+          </tr>
+        </thead>
+        <tbody id="showcomment"></tbody>
+      </table>
+      <hr/>
     </div> 
     <br/>  
     <br/> 
@@ -168,17 +164,11 @@
     <br/>  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    
     <script>
       document.addEventListener('DOMContentLoaded', function () {
         checkAuthentication(); // 페이지 로드 시 토큰 확인
         getComment(); // 페이지 로드 시 댓글 로드
-
-        // 매치 ID를 가져와서 수정 버튼의 href 속성을 설정
-        const boardId = window.location.pathname.split('/').pop();
-        const editButton = document.getElementById('editButton');
-        if (editButton) {
-          editButton.href = `/match/edit/${boardId}`;
-        }
       });
 
       // 사용자의 인증 여부를 확인하는 함수
@@ -190,6 +180,32 @@
           alert('로그인이 필요합니다.');
           window.location.href = '/users/login'; // 로그인 화면으로 리다이렉트
         }
+      }
+
+      const token = sessionStorage.getItem('토큰');
+
+      fetch("/users/getid", {
+        method: 'GET',
+        headers: {
+          'authorization': `${token}`,
+          'Content-Type': 'application/json'
+        },
+      })
+      .then(response => response.json())
+      .then(data => { 
+        const matchWriter = document.getElementById('writer').textContent.trim();
+        if (data.user_id !== matchWriter) {
+          document.getElementById('editButton').style.display = 'none';
+          document.getElementById('deleteButton').style.display = 'none';
+        }
+      })
+      .catch(error => console.error('Error:', error));
+
+      // 매치 ID를 가져와서 수정 버튼의 href 속성을 설정
+      const boardId = window.location.pathname.split('/').pop();
+      const editButton = document.getElementById('editButton');
+      if (editButton) {
+        editButton.href = `/match/edit/${boardId}`;
       }
 
       // 댓글 쓰기
@@ -269,7 +285,6 @@
               row.appendChild(writerCell);
 
               showcomment.appendChild(row);
-              
             });
           } else {
             alert('댓글 로드에 실패하였습니다.');
@@ -311,16 +326,17 @@
           alert('삭제가 취소되었습니다.');
         }
       }
-      //사이드바 높이 동적으로 조절
-    function setSidebarHeight() {
-          const sidebar = document.getElementById('sidebar-wrapper');
-          const windowHeight = window.innerHeight;
-          const newHeight = windowHeight + 120; // 현재 창 높이에 500px 추가
-          sidebar.style.height = newHeight + 'px';
-        }
 
-        window.addEventListener('DOMContentLoaded', setSidebarHeight);
-        window.addEventListener('resize', setSidebarHeight);
+      //사이드바 높이 동적으로 조절
+      function setSidebarHeight() {
+        const sidebar = document.getElementById('sidebar-wrapper');
+        const windowHeight = window.innerHeight;
+        const newHeight = windowHeight + 120; // 현재 창 높이에 500px 추가
+        sidebar.style.height = newHeight + 'px';
+      }
+
+      window.addEventListener('DOMContentLoaded', setSidebarHeight);
+      window.addEventListener('resize', setSidebarHeight);
     </script>
   </body>
 </html>
