index.html 디자인 수정

--- a/views/match_filter.html
+++ b/views/match_filter.html
@@ -96,7 +96,7 @@
       const month = originalDate.getMonth()+1;
       const day = originalDate.getDate();
 
-      document.getElementById("titletext").innerHTML =  `${year} ${month} ${day} 매치`;
+      document.getElementById("titletext").innerHTML =  `${year}.${month}.${day} 매치`;
       
       const tbody = document.getElementById('matchTableBody');
       const paginationDiv = document.getElementById('pagination');
