--- a/views/my_community.html
+++ b/views/my_community.html
@@ -70,7 +70,7 @@
       
       <div style="margin: 0 auto; width: 80%;">
         <div class="container-fluid  p-5">       
-          <h2 class="text-center mt-5 fw-bold ">내 게시글</h2>
+          <h3 class="text-center mt-5 fw-bold ">내 커뮤니티글</h3>
           <div class="container-fluid p-5 me-5 mr-5list-container ">
             <div class="card mb-1 p-3"  style="border: 3px solid #006f3e;">
               <div class="card-header float-start">커뮤니티</div>
