구글 애널리틱스 코드 추가

--- a/views/my_match.html
+++ b/views/my_match.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/index_style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <title>PangPang</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZZE856QMM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PZZE856QMM');
+    </script>
     <style>
       .mypagecontent {
         background-color: #fff;
