--- a/views/community.html
+++ b/views/community.html
@@ -23,6 +23,15 @@
             })
             .catch(error => console.error('Error:', error));
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZZE856QMM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PZZE856QMM');
+    </script>
   </head>
 
   <body>
