--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,15 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <title>PangPang</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZZE856QMM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PZZE856QMM');
+    </script>
     <script>      
         fetch('/navbar')
               .then(response => response.text())
