--- a/views/index.html
+++ b/views/index.html
@@ -48,14 +48,15 @@
   <body>
     <!-- 네비게이션바 -->
     <div id='content'></div>
-    <div class="page-header theme-bg-dark py-5 text-center position-relative" >
-	    <div class="container">
+    <br>
+    <br>
+    <div class="page-header theme-bg-dark py-5 text-center position-relative" style="background-color: #006f3e; margin: 0px 200px;  border-radius: 60px 60px/60px 60px; " >
+	    <div class="container" >
             <br>
             <br>
-		    <h3 class="page-heading single-col-max mx-auto" style="font-weight: bold;">여러분의 스포츠 파트너를 찾아보세요!</h3>
+		    <h3 class="page-heading single-col-max mx-auto" style="font-weight: solid; color:white; text-align: center;">⛹⛹️‍♀여러분의 스포츠 파트너를 찾아보세요!</h3>
 	    </div>
     </div>
-    <hr class="my-4" style="height: 3px; background-color: #006f3e;">
     
 
     <div class="container-fluid" style="margin: 0 auto; width: 80%;">
@@ -63,7 +64,23 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="card bg-default" style="margin-bottom: 40px;">
+                        <!--날씨-->
+                        <br>
+                        <br>
+                        <div class="card " style="margin-top: 35px; padding-top: 30px; padding-bottom:30px; border: 2px solid #006f3e;">
+                            <div class="card-body" >
+                                <div class="row"  >
+                                    <div class="col-md-12">
+                                        <div id="ww_ef52dafbb06df" v='1.3' loc='id' a='{"t":"responsive","lang":"ko","sl_lpl":1,"ids":["wl4479"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://sharpweather.com/ko/seoul/" id="ww_ef52dafbb06df_u" target="_blank">서울 날씨</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_ef52dafbb06df"></script>
+                                    </div>
+                                </div>
+
+                                </div>
+                            <br>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card bg-default" style="margin-top: 80px; border: 2px solid #006f3e;">
                             <div class="card-body">
                               <table class="table table-hover table-striped">
                                 <thead>
@@ -78,14 +95,46 @@
                               </table>
                             </div>
                       </div>
-                    </div>
-                    <!--커뮤니티-->
+                </div>
+                <div class="row">
                     <div class="col-md-6">
-                        <div class="card" style="padding: 10px; ">
+                        <!--달력-->
+                        <div class="card">
+                            <div class="card-body">
+                                <h5>운동하고 싶은 날을 선택해보세요!</h5>
+                                
+                                <table class="Calendar" style=" border: 3px solid #006f3e; padding: 10px;">
+                                    <thead>
+                                        <tr>
+                                            <td onClick="prevCalendar();" style="cursor:pointer;">&#60;</td>
+                                            <td colspan="5">
+                                                <span id="calYear"></span>년
+                                                <span id="calMonth"></span>월
+                                            </td>
+                                            <td onClick="nextCalendar();" style="cursor:pointer;">&#62;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>일</td>
+                                            <td>월</td>
+                                            <td>화</td>
+                                            <td>수</td>
+                                            <td>목</td>
+                                            <td>금</td>
+                                            <td>토</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6" >
+                        <div class="card" style="padding-top: 40px;">
                             <div class="row">
                                 <div class="col-md-12">
                                  
-                                    <button type="button" class="btn" style="width: 600px; height: 110px; background-color: #006f3e; color:white;">
+                                    <button type="button" class="btn" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
                                         ✏️ 나의 매치글
                                     </button>
                                 </div>
@@ -113,65 +162,13 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                      
-                                        <button type="button" class="btn" style="width: 600px; height: 110px; background-color: #006f3e; color:white;">
+                                        <button type="button" class="btn" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
                                             🔗 노원구 시설관리공단
                                         </button>
                                     </div>
                                 </div>
                             </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <!--달력-->
-                        <div class="card">
-                            <div class="card-body">
-                                운동하고 싶은 날을 선택해보세요!
-                                
-                                <table class="Calendar">
-                                    <thead>
-                                        <tr>
-                                            <td onClick="prevCalendar();" style="cursor:pointer;">&#60;</td>
-                                            <td colspan="5">
-                                                <span id="calYear"></span>년
-                                                <span id="calMonth"></span>월
-                                            </td>
-                                            <td onClick="nextCalendar();" style="cursor:pointer;">&#62;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>일</td>
-                                            <td>월</td>
-                                            <td>화</td>
-                                            <td>수</td>
-                                            <td>목</td>
-                                            <td>금</td>
-                                            <td>토</td>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 text-center">
-                        <!--날씨-->
-                        <div class="card text-center">
-                            <div class="card-body" >
-                                <div class="row" style=" width: 464px;" >
-                                    <div class="col-md-12">
-                                        <div id="ww_ef52dafbb06df" v='1.3' loc='id' a='{"t":"responsive","lang":"ko","sl_lpl":1,"ids":["wl4479"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://sharpweather.com/ko/seoul/" id="ww_ef52dafbb06df_u" target="_blank">서울 날씨</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_ef52dafbb06df"></script>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div id="ww_1dca7758b9d74" v='1.3' loc='id' a='{"t":"horizontal","lang":"ko","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://sharpweather.com/ko/seoul/" id="ww_1dca7758b9d74_u" target="_blank">서울 날씨</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_1dca7758b9d74"></script>
-                                    </div>
-                                </div>
-
-                                </div>
-                            <br>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -207,7 +204,7 @@
             tbody.innerHTML = ''; // Clear the table
 
             // Limiting to display only 5 posts or posts available if less than 5
-            const numberOfPosts = Math.min(7, data.boards.length);
+            const numberOfPosts = Math.min(5, data.boards.length);
 
             for (let index = 0; index < numberOfPosts; index++) {
                 const community = data.boards[index];
