달력에 게시글 연결 수정, 인덱스에서 버튼 링크 연결

--- a/views/index.html
+++ b/views/index.html
@@ -134,7 +134,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                  
-                                    <button type="button" class="btn" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
+                                    <button type="button" class="btn" onclick="location.href='/users/match/${id}'" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
                                         ✏️ 나의 매치글
                                     </button>
                                 </div>
@@ -142,19 +142,19 @@
                                 <div class="row gx-50">
                                     <div class="col-md-4">
                                             
-                                        <button type="button" class="btn" style="width: 190px; height: 110px; background-color: #006f3e; color:white;">
+                                        <button type="button" class="btn" onclick="location.href='/help/notices'" style="width: 190px; height: 110px; background-color: #006f3e; color:white;">
                                             📌 공지사항
                                         </button>
                                     </div>
                                     <div class="col-md-4">
                                             
-                                        <button type="button" class="btn" style="width: 190px; height: 110px; background-color: #006f3e; color:white;">
+                                        <button type="button" class="btn" onclick="location.href='/help/qna'" style="width: 190px; height: 110px; background-color: #006f3e; color:white;">
                                             ❔️ Q&A
                                         </button>
                                     </div>
                                     <div class="col-md-4">
                                             
-                                        <button type="button" class="btn" style="width: 190px; height: 110px; background-color: #006f3e; color:white;">
+                                        <button type="button" class="btn" onclick="location.href='/help/faq'" style="width: 190px; height: 110px; background-color: #006f3e; color:white;">
                                             📄 FAQ
                                         </button>
                                     </div>
@@ -162,7 +162,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                      
-                                        <button type="button" class="btn" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
+                                        <button type="button" class="btn" onclick="location.href='https://reservation.nowonsc.kr/'" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
                                             🔗 노원구 시설관리공단
                                         </button>
                                     </div>
