index.html 교내장소 사용신청 추가

--- a/views/index.html
+++ b/views/index.html
@@ -168,6 +168,14 @@
                                         </button>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                     
+                                        <button type="button" class="btn" onclick="location.href='https://klas.kw.ac.kr/usr/cmn/login/LoginForm.do?redirectUrl=/std/sys/optrn/e4c863dfd8c7410d92bc4abc9542bccd/BoardListStdPage.do'" style="width: 600px; height: 120px; background-color: #006f3e; color:white;">
+                                            🔗 교내장소 사용신청
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                     </div>
                     </div>
